demo/css/demo.css
*, :after, :before {
	box-sizing: border-box;
}

body, html {
	height: 100%;
	width: 100%;
}

body, p, h1, h2, h3 {
	margin: 0;
	padding: 0;
}

p, h1, h2 {
	line-height: 1.3;
	text-shadow: 0 0 5px rgba(0, 0, 0, .6);
	width: 100%;
}

body {
	font-family: 'Source Sans Pro', helvetica, arial;
	font-size: 18px;
	font-weight: 300;
}

p {
	font-size: 1em;
}
p--copy {
	padding: 3px 0 22px 0;
}
p--credits {
	font-size: .8em;
	font-weight: 700;
}

h1, h2 {
	font-size: 1.5em;
	font-weight: 700;
}

a {
	color: #fff;
	font-weight: 700;
	text-decoration: none;
}
a--no-weight {
	font-weight: 300;
}

.container {
	-webkit-align-items: center;
	align-items: center;
	display: -webkit-flex;
	display: -ms-flexbox;
	display: flex;
	-ms-flex-align: center;
	-webkit-flex-wrap: wrap;
	-ms-flex-wrap: wrap;
	flex-wrap: wrap;
	margin: 0;
	padding: 15px;
	position: relative;
	width: 100%;
}
.container--big {
	height: 175vh;
}
.container--full {
	height: 100vh;
}
.container--small {
	height: 40vh;
}
.container--random {
	height: "68px";
}
.container .content {
	background: rgba(0, 0, 0, .6);
	border-radius: 3px;
	color: #fff;
	margin: 0 auto;
	padding: 15px 20px;
	text-align: center;
}

.parallax__container {
	clip: rect(0, auto, auto, 0);
	height: 100%;
	left: 0;
	position: absolute;
	top: 0;
	width: 100%;
	z-index: -100;
}
.parallax__container .parallax {
	/* can be put in a seperate class for better control */
	background-position: center;
	background-repeat: no-repeat;
	background-size: cover;
	/* --------------------------- */
	position: fixed;
	top: 0;
	-webkit-transform: translate3d(0, 0, 0);
	transform: translate3d(0, 0, 0);
	width: 100%;
}

.bg1 {
	background-image: url("../img/bg1.jpg");
}

#bg3 {
	background-image: url("../img/bg3.jpg");
}

